Cherry-pick 272012@main (aa62ce7b9059). https://bugs.webkit.org/show_bug.cgi?id=266294

BYTECODE_HELPER_ID LLint opcodes need look up for wide versions.
    https://bugs.webkit.org/show_bug.cgi?id=266294
    rdar://119563251

    Reviewed by Justin Michaud.

    FOR_EACH_BYTECODE_HELPER_ID was mistakenly lumped in with FOR_EACH_LLINT_NATIVE_HELPER, which
    does not populate their entries in g_opcodeMapWide16 and g_opcodeMapWide32.  This patch fixes
    that.

    This was causing CLoop runs to crash on nullptr derefs on these non-initialized entries.

    * Source/JavaScriptCore/llint/LLIntOpcode.h:
    * Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:
    (JSC::CLoop::execute):

    Canonical link: https://commits.webkit.org/272012@main